[package]
name = "file_transfert"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[dependencies]
chrono = "0.4.22"
walkdir = "2.3.2"
clap = { version = "3.2.18", features = ["derive"] }
serde = "1.0.144"
serde_derive = "1.0.144"
serde_json = "1.0.85"
users = "0.11.0"
pbr = "1.0.4"
tar = "0.4.38"
flate2 = "1.0.24"
base64 = "0.13.0"
